tests/negative/float_wrong_type.rkl
; Only numbers and numeric strings convert.
(float (list 1 2))
